Corrected alignment for author title.

--- a/styles/style.css
+++ b/styles/style.css
@@ -103,6 +103,7 @@ main {
   display: flex;
   flex-direction: row;
   justify-content: start;
+  align-items: center;
   gap: var(--spacing-150);
 
   width: 100%;
